--- a/src/client/assets/styles/main.scss
+++ b/src/client/assets/styles/main.scss
@@ -10,6 +10,7 @@
 @import "./base/button";
 @import "./base/typography";
 @import "./base/utilities";
+@import "./base/modal";
 
 // layout components and grid macro layouts
 @import "./layouts/default";
