--- a/src/client/assets/styles/components/_movie.scss
+++ b/src/client/assets/styles/components/_movie.scss
@@ -2,20 +2,13 @@
   $self: &;
 
   &--modal {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 9998;
-    height: 100%;
-    width: 100%;
-    background-color: rgba($surface, 85%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-height: 90%;
+    width: 50%;
+    overflow-y: auto;
+    padding: 1rem;
+    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4);
+    border-radius: 1rem;
 
-    #{$self}__content {
-      z-index: 9999;
-      @include background-layer(1);
-    }
+    @include background-layer(1);
   }
 }
