fix hover color

--- a/src/client/assets/styles/components/_movie-card.scss
+++ b/src/client/assets/styles/components/_movie-card.scss
@@ -21,13 +21,13 @@
     height: 11rem;
     flex: 0 0 22rem;
 
-    // @todo add this effect to the parent button as well (for tab focus)
     &:hover,
     &:focus {
       outline: none;
       transform: scale(1.05);
       box-shadow: 0 0 15px 0 $primary;
       z-index: 1;
+      color: unset;
 
       #{$self}__expand {
         color: $primary;
