index support for crawling movie links

--- a/src/client/assets/styles/components/_movie-table.scss
+++ b/src/client/assets/styles/components/_movie-table.scss
@@ -69,6 +69,10 @@
 
       @include background-layer(1);
 
+      a:hover {
+        color: unset;
+      }
+
       &:first-child {
         padding: 0;
         border: none;
