--- a/src/client/assets/styles/base/_base.scss
+++ b/src/client/assets/styles/base/_base.scss
@@ -18,10 +18,10 @@ a {
   text-decoration: none;
 
   &:hover {
-    color: $secondary;
+    color: $primary;
   }
 }
 
 :focus {
-  outline-color: $secondary;
+  outline-color: $primary;
 }
