--- a/src/client/assets/styles/base/_base.scss
+++ b/src/client/assets/styles/base/_base.scss
@@ -13,6 +13,17 @@ p {
   margin: 0;
 }
 
+h1 {
+  font-family: Comfortaa;
+  font-weight: 400;
+  font-size: $lg-4x;
+}
+
+h2 {
+  font-family: Comfortaa;
+  font-size: $lg-3x;
+}
+
 a {
   color: inherit;
   text-decoration: none;
