--- a/src/client/assets/styles/base/_button.scss
+++ b/src/client/assets/styles/base/_button.scss
@@ -8,3 +8,25 @@
   min-width: 0;
   min-height: 0;
 }
+
+.g-btn-main {
+  padding: 0.75rem 1rem;
+  background-color: transparent;
+  font-weight: 600;
+  font-size: $lg;
+  border: 0.1rem solid $on-surface;
+  border-radius: 1.5rem;
+  color: $on-surface;
+  transition: box-shadow 0.2s;
+
+  box-shadow: 0 0 0.2rem $on-surface, 0 0 0 $on-surface,
+    0 0 0.2rem $primary-accent, 0 0 0 $primary-accent,
+    inset 0 0 0.75rem $primary-accent;
+
+  &:hover {
+    color: unset;
+    box-shadow: 0 0 0.2rem $on-surface, 0 0 0.3rem $on-surface,
+      0 0 0.2rem $primary-accent, 0 0 0.8rem $primary-accent,
+      inset 0 0 1.3rem $primary-accent;
+  }
+}
