--- a/src/client/assets/styles/components/_search-extended.scss
+++ b/src/client/assets/styles/components/_search-extended.scss
@@ -2,18 +2,16 @@
   $self: &;
   @include background-layer(1);
   padding: $sm;
-  margin-bottom: $lg;
   border: 3px solid background-layer-color(2);
-  max-width: 60rem;
-  margin-inline: auto;
 
   input,
   select,
-  button {
+  button:not(.g-btn-main) {
     background: $on-surface-dim;
     color: $on-surface-5dim;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
+    height: 1.75rem;
   }
 
   button {
